Mon Jul 11 17:02:40 CEST 2005	Michael Neumann <mneumann@ntecs.de>

	* lib/wee.rb (Wee.run): Added method for easy startup of components. 

	* lib/wee/application.rb: Method Application#insert_new_request_handler
	  added. Refactored #handle_request a bit.

Mon Jul 11 16:06:49 CEST 2005	Michael Neumann <mneumann@ntecs.de>

	* lib/wee/snapshot_ext.rb: refactored. enhanced Hash to be snapshotable.

	* lib/wee/session.rb: fixed two bugs I lately introduced during refactoring

	* lib/wee/renderer/html/canvas.rb: added r.label

	* lib/wee/examples/{pager,counter,editable_counter,calculator}.rb: 
	  moved components from examples directory into Wee base. 

	* lib/wee.rb: increased version to 0.9.0. Introduced module Wee::Examples.

	* lib/wee/skeleton/og/components/main.rb: Minor cleanup.

	* lib/wee/databases/og/scaffolder.rb: removed whitespace.

Sat Jul  2 17:48:00 CEST 2005	Michael Neumann	<mneumann@ntecs.de>

	* lib/wee/adaptors/rails.rb: Integrate Wee components into RubyOnRails.
	  Very simple example:

			##
		  # In config/environment.rb add:

			require 'wee'
			require 'wee/adaptors/rails'
			require 'components/mycomponent'

			##
			# In components/mycomponent.rb:

			class MyComponent < Wee::Component
			  # ... your Wee component ...
		  end

			##
			# In app/controllers/wee_controller.rb:

			class WeeController < ApplicationController
			  include Wee::Rails::ControllerMixin

				register_component "my" do
				  MyComponent.new
				end
			end

			##
			# In app/views/index.rhtml:

			<html><body>
			<%= show_component 'my' %>
			</body></html>

	  Of course you can render as many components as you like on one page. 
		You can create components dynamically at runtime with:

		  make_component component_name, component_object

	  For example instead of using 'register_component' in the WeeController
		shown above, you could write:

			def index
	      make_component('my', MyComponent.new) unless has_component?('my')
				# render the view
		  end
